# otus-homework5

./: CMakeLists.txt  circle.cpp  circle.h  controller.h  figure.cpp  figure.h  main.cpp  model.cpp  model.h  rect.cpp  rect.h  view.h
.github/workflows/: release.yml
